# termite

./: .gitignore  CMakeLists.txt  README.md  termite.natvis
.github/workflows/: codeql.yml
cmake/: termite_config.cmake.in
include/termite/: expected.h
test/: expected_test.cpp
